; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_hercules.c_ConsoleShutdownHercules.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_hercules.c_ConsoleShutdownHercules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pScreenBufferHercules = common dso_local global i64 0, align 8
@FRAMEBUFFER_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ConsoleShutdownHercules() #0 {
  %1 = call i32 (...) @ENTER_FUNC()
  %2 = call i32 @outb_p(i32 0, i32 952)
  %3 = call i32 @outb_p(i32 0, i32 959)
  %4 = load i64, i64* @pScreenBufferHercules, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i64, i64* @pScreenBufferHercules, align 8
  %8 = load i32, i32* @FRAMEBUFFER_SIZE, align 4
  %9 = call i32 @MmUnmapIoSpace(i64 %7, i32 %8)
  br label %10

10:                                               ; preds = %6, %0
  %11 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @outb_p(i32, i32) #1

declare dso_local i32 @MmUnmapIoSpace(i64, i32) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
